tests/error/poly_errors/non_linear2.err
Error: Expected a copyable type (at $FILE:15:8)
   | 
13 | @guppy
14 | def main() -> None:
15 |     foo(h)
   |         ^ Expected a copyable type, got type `qubit` which is not
   |           implicitly copyable

Guppy compilation failed due to 1 previous error
